test_fm/_test90.nj
//
// constructor with wrong name
//


public class Main extends Object {

  public Foo() {
  }

  public static void main() {
    
  }

}
